--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,10 +3,11 @@
   "name": "Wells Fargo ZK Balance Verifier",
   "version": "1.0",
   "description": "Verifies balance exceeds threshold using ZK proofs",
-  "permissions": [
-    "activeTab",
-    "scripting"
-  ],
+    "permissions": [
+      "activeTab",
+      "scripting",
+      "storage"
+    ],
   "host_permissions": [
     "https://connect.secure.wellsfargo.com/*",
     "http://localhost:3000/*"
