--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "dependencies": {
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
-    "snarkjs": "^0.7.5"
+    "jsonwebtoken": "^9.0.2",
+    "snarkjs": "^0.7.5",
+    "uuid": "^11.0.4"
   },
   "scripts": {
     "start": "node server.js",
